# video2timeline

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Directory.Build.props  MODEL_AND_RUNTIME_NOTES.md  README.ja.md  README.md  THIRD_PARTY_NOTICES.md  cli.ps1  docker-compose.gpu.yml  docker-compose.yml  reset.bat  reset.command  settings.example.json  start.bat  start.command  start.ps1  stop.bat  stop.ps1  timeline-product.json  uninstall.bat  uninstall.command
worker/: pyproject.toml  requirements-audio-models-cpu.txt  requirements-audio-models-gpu.txt  requirements-cpu.txt
worker/src/timeline_for_video_worker/: activity_map.py  audio_analysis.py  audio_models.py  cli.py  discovery.py  frame_ocr.py  items.py  locks.py  model_inventory.py  probe.py  processor.py  sampling.py  settings.py
worker/src/timelineforvideo_worker/: catalog.py  change_detection.py  cli.py  contracts.py  discovery.py  eta.py  ffmpeg_utils.py  fs_utils.py  hashing.py  job_store.py  processor.py  screens.py  settings.py  timeline.py  transcribe.py
worker/src/video2timeline_worker/: catalog.py  cli.py  config.py  contracts.py  ffmpeg_utils.py  fs_utils.py  job_store.py  (+5 more)
worker/tests/: test_activity_map.py  test_audio_analysis.py  test_audio_models.py  test_cli.py  test_contracts.py  test_discovery.py  test_eta.py  test_ffmpeg_utils.py  test_frame_ocr.py  test_fs_utils.py  test_items.py  test_job_store.py  test_locks.py  test_model_inventory.py  test_probe.py  test_processor.py  test_sampling.py  test_screens.py  test_settings.py  test_timeline.py  test_transcribe.py
(+101 files in other folders)
